--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <span class="heading-primary-main">Art</span>
                     <span class="heading-primary-sub">is where work meets love</span>
                 </h1>
+                <a href="#" class="btn btn-white">Discover</a>
             </div>
         </header>
     </body>
