--- a/sass-comencando.html
+++ b/sass-comencando.html
@@ -1,12 +1,28 @@
-<nav>
-  <ul class="navigation">
-    <li><a href="#">About us</a></li>
-    <li><a href="#">Pricing</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-  
-  <div class="buttons">
-    <a class="btn-main" href="#">Sign Up</a>
-    <a class="btn-hot" href="#">Get a quote</a>
-  </div>
-</nav>
+<!DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
+        <link rel="stylesheet" href="css/icon-font.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+        <title>Sailor Sprite | Everything is an art project</title>
+    </head>
+
+    <body>
+      <nav>
+        <ul class="navigation">
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+
+        <div class="buttons">
+          <a class="btn-main" href="#">Sign Up</a>
+          <a class="btn-hot" href="#">Get a quote</a>
+        </div>
+      </nav>
+    </body>
+</html>
