--- a/sass-comencando.html
+++ b/sass-comencando.html
@@ -2,13 +2,8 @@
     <html lang="en">
 
     <head>
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
         <link rel="stylesheet" href="css/icon-font.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-
-        <title>Sailor Sprite | Everything is an art project</title>
+        <link rel="stylesheet" href="sass-comencando.scss">
     </head>
 
     <body>
