--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a href="#" class="btn btn--white btn--animated">Discover</a>
             </div>
         </header>
+<!--         
         <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
@@ -85,7 +86,7 @@
                     Col 3 of 4
                 </div>   
             </div>
-        </section>
+        </section> -->
     </body>
 
     </html>
