--- a/index.html
+++ b/index.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
 
-    <head>
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/icon-font.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="stylesheet" href="css/icon-font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-        <title>Sailor Sprite | Everything is an art project</title>
-    </head>
+    <title>Sailor Sprite | Everything is an art project</title>
+</head>
 
-    <body>
-        <header class="header">
-            <div class="header__logo-box">
-                <img src="img/logo.png" alt="Logo" class="header__logo">
+<body>
+    <header class="header">
+        <div class="header__logo-box">
+            <img src="img/logo.png" alt="Logo" class="header__logo">
+        </div>
+        <div class="header__text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary--main">Art</span>
+                <span class="heading-primary--sub">is where work meets love</span>
+            </h1>
+            <a href="#" class="btn btn--white btn--animated">Discover</a>
+        </div>
+    </header>
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secundary">
+                    Exciting tours for adventurous people
+                </h2>
             </div>
-            <div class="header__text-box">
-                <h1 class="heading-primary">
-                    <span class="heading-primary--main">Art</span>
-                    <span class="heading-primary--sub">is where work meets love</span>
-                </h1>
-                <a href="#" class="btn btn--white btn--animated">Discover</a>
-            </div>
-        </header>
-        <main>
-            <section class="section-about">
-                <div class="u-center-text u-margin-botton-8">
-                    <h2 class="heading-secundary">
-                        Exciting tours for adventurous people
-                    </h2>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        You're going to fall in love with nature
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum a egestas justo, non ultrices turpis. Nam ante sapien,
+                        viverra vel dictum auctor, pretium eu diam. Aenean ex nulla, fringilla et scelerisque ac, interdum
+                        cursus ante.
+                    </p>
+
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Live adventures like you never have before
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum a egestas justo, non ultrices turpis.
+                    </p>
+
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
-
-                <div class="row">
-                        <div class="col-1-of-2">
-                            Text content
-                        </div>
-                        <div class="col-1-of-2">
-                            Image composition
-                        </div>
-                    </div>
-            </section>
-        </main>
-<!--         
+                <div class="col-1-of-2">
+                    Image composition
+                </div>
+            </div>
+        </section>
+    </main>
+    <!--         
         <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
@@ -105,6 +121,6 @@
                 </div>   
             </div>
         </section> -->
-    </body>
+</body>
 
-    </html>
+</html>
