--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                     <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
-                    Image composition
+                    <div class="composition">
+                        <img src="img/mat1.jpeg" alt="Photo 1" class="composition__photo composition__photo__p1">
+                        <img src="img/mat2.jpeg" alt="Photo 2" class="composition__photo composition__photo__p2">
+                        <img src="img/mat3.jpg" alt="Photo 3" class="composition__photo composition__photo__p3">
+                    </div>
                 </div>
             </div>
         </section>
