--- a/index.html
+++ b/index.html
@@ -109,7 +109,14 @@
             </div>
             <div class="row">
                 <div class="col-1-of-3">
-                    Col 1 of 3
+                    <div class="card">
+                        <div class="card__side card__side__front">
+                            Front
+                        </div>
+                        <div class="card__side card__side__back card__side__back_1">
+                            Back
+                        </div>
+                    </div>
                 </div>
                 <div class="col-1-of-3">
                     Col 1 of 3
