--- a/index.html
+++ b/index.html
@@ -111,7 +111,16 @@
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side__front">
-                            Front
+                            <div class="card__picture card__picture__1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span></span>
+                                The sea explorer
+                            </h4>
+                            <div class="card__details">
+                                Details
+                            </div>
                         </div>
                         <div class="card__side card__side__back card__side__back_1">
                             Back
