--- a/index.html
+++ b/index.html
@@ -115,25 +115,101 @@
                                 &nbsp;
                             </div>
                             <h4 class="card__heading">
-                                <span></span>
-                                The sea explorer
+                                <span class="card__heading__span card__heading__span__1">
+                                    The sea explorer
+                                </span>
                             </h4>
                             <div class="card__details">
-                                Details
+                                <ul>
+                                    <li>3 days tours</li>
+                                    <li>Up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>Sleep in cozy hotels</li>
+                                    <li>Difficulty: easy</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="card__side card__side__back card__side__back_1">
-                            Back
+                            <div class="card__cta">
+                                <div class="card__price_box">
+                                    <p class="card__price_only">Only</p>
+                                    <p class="card__price_value">$297</p>
+                                </div>
+                                <a href="" class="btn btn--white">Book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-1-of-3">
-                    Col 1 of 3
+                    <div class="card">
+                        <div class="card__side card__side__front">
+                            <div class="card__picture card__picture__2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading__span card__heading__span__2">
+                                    The florest hiker
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>7 days tours</li>
+                                    <li>Up to 40 people</li>
+                                    <li>6 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty: medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side__back card__side__back_2">
+                            <div class="card__cta">
+                                <div class="card__price_box">
+                                    <p class="card__price_only">Only</p>
+                                    <p class="card__price_value">$497</p>
+                                </div>
+                                <a href="" class="btn btn--white">Book now!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-1-of-3">
-                    Col 1 of 3
+                    <div class="card">
+                        <div class="card__side card__side__front">
+                            <div class="card__picture card__picture__3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading__span card__heading__span__3">
+                                    The snow adventurer
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>5 days tours</li>
+                                    <li>Up to 15 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>Difficulty: hard</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side__back card__side__back_3">
+                            <div class="card__cta">
+                                <div class="card__price_box">
+                                    <p class="card__price_only">Only</p>
+                                    <p class="card__price_value">$897</p>
+                                </div>
+                                <a href="" class="btn btn--white">Book now!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn btn--pink">Discover all tours</a>
+            </div>
+
         </section>
     </main>
 </body>
