--- a/index.html
+++ b/index.html
@@ -211,6 +211,19 @@
             </div>
 
         </section>
+
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secundary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    Text
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
