--- a/index.html
+++ b/index.html
@@ -220,7 +220,17 @@
             </div>
             <div class="row">
                 <div class="story">
-                    Text
+                    <figure class="story__shape">
+                        <img src="img/mat1.jpeg" alt="Person on a tour" class="story__img">
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            I had the best week with my family
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.Vestibulum a egestas justo, non ultrices turpis.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
