--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="img/mat1.jpeg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption"> Mary Smith</figcaption>
                     </figure>
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">
@@ -233,6 +234,27 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/mat2.jpeg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption"> Jake Wilson</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Wow! My life is completely different now.
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.Vestibulum a egestas justo, non ultrices turpis.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
+
         </section>
     </main>
 </body>
