--- a/index.html
+++ b/index.html
@@ -216,9 +216,8 @@
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
                     <source src="img/video.mp4" type="video/mp4">
-                        <source src="img/video.webm" type="video/webm">
-                            Your browser is not supported!
-                        
+                    <source src="img/video.webm" type="video/webm"> Your browser is not supported!
+
                 </video>
             </div>
 
@@ -264,6 +263,29 @@
                 <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
 
+        </section>
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secundary">
+                                    Start booking now
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input id="name" type="text" class="form__input" placeholder="Full name" required>
+                                <label for="name" class="form__label">Full name</label>
+                            </div>
+                            <div class="form__group">
+                                <input id="email" type="email" class="form__input" placeholder="Email address" required>
+                                <label for="email" class="form__label">Email address</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
