--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="heading-primary--main">Art</span>
                 <span class="heading-primary--sub">is where work meets love</span>
             </h1>
-            <a href="#" class="btn btn--white btn--animated">Discover</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover</a>
         </div>
     </header>
     <main>
@@ -120,7 +120,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secundary">
                     Most popular tours
@@ -154,7 +154,7 @@
                                     <p class="card__price_only">Only</p>
                                     <p class="card__price_value">$297</p>
                                 </div>
-                                <a href="" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                                     <p class="card__price_only">Only</p>
                                     <p class="card__price_value">$497</p>
                                 </div>
-                                <a href="" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                                     <p class="card__price_only">Only</p>
                                     <p class="card__price_value">$897</p>
                                 </div>
-                                <a href="" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -349,6 +349,25 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/mat2.jpeg" alt="Tour photo" class="popup__img">
+                <img src="img/mat3.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secundary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read theses terms before booking</h3>
+                <p class="popup__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id elit a risus viverra bibendum. Nunc dignissim ullamcorper arcu ut auctor. Cras cursus odio sed tellus gravida, vitae dictum est posuere. Mauris ac arcu et eros laoreet ultrices. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras vestibulum augue eu euismod maximus. Donec eu convallis diam. Cras convallis tellus nibh. Maecenas molestie, nulla in dictum vestibulum, nisl sem laoreet arcu, ut ultrices justo tortor id felis. Nunc consequat maximus maximus. Cras tincidunt neque ullamcorper mi lobortis, pharetra cursus arcu elementum.
+                </p>
+                <a href="#" class="btn btn--pink">Book now</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
